Use type property to resolve and resolve the context

--- a/test/json-ld.net.tests/json-ld.net.tests.csproj
+++ b/test/json-ld.net.tests/json-ld.net.tests.csproj
@@ -47,6 +47,12 @@
     <None Update="ExtendedFunctionality\Sorting\fromRdf-in.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Json\ed25519signature2020-proof-options.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Json\ed25519signature2020-cred-without-proof.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
